--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
             padding: 16px;
             overflow-y: auto;
             flex-shrink: 0; /* Prevent shrinking */
-            max-height: 35vh; /* Limit height to avoid taking too much space */
             border-top: 1px solid #dee2e6;
             border-bottom: 1px solid #dee2e6;
             box-sizing: border-box;
@@ -156,6 +155,13 @@
 
         /* Responsive adjustments for mobile */
         @media (max-width: 768px) {
+            #controls {
+                max-height: 25vh;
+                overflow-y: auto;
+            }
+            #infoPanel {
+                max-height: 25vh;
+            }
             #controls button {
                 padding: 8px 10px;
                 font-size: 12px;
@@ -1093,3 +1099,4 @@
 
 </body>
 </html>
+
