--- a/index.html
+++ b/index.html
@@ -172,6 +172,9 @@
             .param-group label {
                 font-size: 0.8em;
             }
+            #params-column {
+                margin-bottom: 16px;
+            }
         }
 
         /* Responsive adjustments for desktop */
@@ -1099,4 +1102,5 @@
 
 </body>
 </html>
+
 
